<resources>
    <string name="app_name">Orthus</string>


    <string name="logout_button_text">Logout</string>

    <string name="login_greet">Please sign in to Orthus.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="new_user_text">New User?</string>

    <string name="uid_text">Get UID</string>
    <string name="uid_instructions_text">Paste this into the USER_UID field within the ESP8266 code.</string>

    <string name="create_account_greet">Create a new account.</string>
    <string name="create_account_text">Create!</string>

    <string name="status_clear_text">ONLINE</string>
    <string name="status_alarm_text">ACTIVITY</string>
    <string name="status_offline_text">OFFLINE</string>

    <string name="armed_text">Armed</string>
    <string name="disarmed_text">Disarmed</string>

    <string name="preference_file_key">com.example.orthusapp.PREFERENCE_FILE_KEY</string>
    <string name="preference_armed_key">com.example.orthusapp.PREFERENCE_ARMED_KEY</string>

</resources>
